--- a/head.html
+++ b/head.html
@@ -1,4 +1,5 @@
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="viewport" content="width=device-width, initial-scale=1" />
 <script src="/scripts/aem.js" type="module"></script>
 <script src="/scripts/scripts.js" type="module"></script>
-<link rel="stylesheet" href="/styles/styles.css"/>
+<script src="https://unpkg.com/@shopify/storefront-api-client@1.0.7/dist/umd/storefront-api-client.min.js"></script>
+<link rel="stylesheet" href="/styles/styles.css" />
